--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 		<meta charset="UTF-8">
 		<title>Agenda de horários</title>
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
-		<kink rel="stylesheet" type="text/css" href="css/index.css">
+		<link rel="stylesheet" type="text/css" href="css/index.css">
 
 	</head>
 	<body>
-		<p>Olá Mundo</p>
+		
+		<header>
+			<div class="container">
+				<h1 class="titulo">Agenda</h1>
+			</div>
+
+		</header>
 	</body>
 </html>
