Arrumando alinhamento da pagina

--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
 			<div class="container">
 				<h1 class="titulo">Agenda</h1>
 			</div>
-
 		</header>
+
+		<main>
+			<section class="container">
+				<div class="nav">
+					<h2>Bem vindo(a) ao app agenda</h2>
+					<button>Marcar um horário</button>
+					<button>Conferir Agenda</button>
+				</div>
+			</section>
+		</main>
 	</body>
 </html>
