Adicionando o calendario e a hora na pagina marcar, adicionando a pasta js

--- a/marcar.html
+++ b/marcar.html
@@ -16,7 +16,20 @@
 		</header>
 
 		<main>
-		
+			<div class="container">
+				<h2>Escolha a data e a hora</h2>
+				<div>
+					<label for="data">Escolha o dia:</label>
+					<input id="data" type="date">
+				</div>
+
+				<div>
+					<label for="hora">Escolha a hora:</label>
+					<input id="hora" type="time">
+				</div>
+				<button id="marcarHorario">Marcar</button>
+			</div>
 		</main>
+	<script src="js/principal.js"></script>		
 	</body>
 </html>
