Adicionado o reconhecimento dos valores de form, renomeado o arquivo js para marcar um horario

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 		
 		<header>
 			<div class="container">
-				<h1 class="titulo">Agenda</h1>
+				<h1 class="titulo">
+					<a href="index.html">Agenda</a>
+				</h1>
 			</div>
 		</header>
 
